--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Bienvenidos a mi PORTAFOLIO</h1>
     <h2>Valentina Gonzalez</h2>
+    <h3>contactame. telefono 3183979682</h3>
 </body>
 </html>
