--- a/index.html
+++ b/index.html
@@ -10,5 +10,14 @@
     <h1>Bienvenidos a mi PORTAFOLIO</h1>
     <h2>Valentina Gonzalez</h2>
     <h3>contactame. telefono 3183979682</h3>
+    <ul>Menú
+        <li><a href="index.html"></a>Inicio</li>
+        <li><a href="listas.html">Listas</a></li>
+        <li><a href="fuentes.html">Fuentes</a></li>
+        
+            <li><a href="fuentes1.html">fuentes</a></li>
+            <li><a href="fuentes2.html">fuentes</a></li>
+            <li><a href="fuentes3.html">fuentes</a></li>
+        </ul>
 </body>
 </html>
