--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
     <h2>Valentina Gonzalez</h2>
     <h3>contactame. telefono 3183979682</h3>
     <h3>Horarios</h3>
+
+    <ul>menu 
+        <li><a href="listas.html"> lista</a></li> 
+        <li><a href="fuentes1.html"> fuentes 1</a></li>
+        <li><a href="fuentes2.html"> fuentes 2</a></li>
+    </ul> 
 </body>
 </html>
