--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <ul>menu 
         <li><a href="listas.html"> lista</a></li> 
+        <li><a href="fuentes.html"> fuentes 1</a></li>
         <li><a href="fuentes1.html"> fuentes 1</a></li>
         <li><a href="fuentes2.html"> fuentes 2</a></li>
     </ul> 
