--- a/fuentes1.html
+++ b/fuentes1.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="css/fuente1.css">
 </head>
 <body>
-    <h1>Fuente 1</h1>
-    <h2>esta es mi fuente N.1</h2>
+  <div>
+    <label>Game<br>of Thrones</label>
+  </div>
 </body>
 </html>
