--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <ul>menu 
         <li><a href="listas.html"> lista</a>
         <ul>
-            <li><a href="fuentes.html"> fuentes 1</a>
+            <li><a href="fuentes1.html"> fuentes 1</a>
             <ul>
                 <li><a href="fuentes.html"> fuentes 1A</a></li>
                 <li><a href="fuentes.html"> fuentes 1B</a></li>
             </ul></li>
-            <li><a href="fuentes1.html"> fuentes 2</a></li>
+            <li><a href="fuentes2.html"> fuentes 2</a></li>
             <li><a href="fuentes3.html"> fuentes 3</a></li>
         </ul></li> 
        
