--- a/colores.html
+++ b/colores.html
@@ -11,21 +11,21 @@
     <H1>Colores</H1>
     <h2>Colores llamados por su nombre</h2>
     <div class="box-direction">
-        <div class="box-style box-palevioletred"></div>
-        <div class="box-style box-LightSalmon"></div>
-        <div class="box-style box-Coral"></div>
+        <div class="box-style box-palevioletred">color:<br>palevioletred</div>
+        <div class="box-style box-LightSalmon">color:<br>LightSalmon</div>
+        <div class="box-style box-Coral">color:<br>Coral</div>
     </div>
     <h2>Colores llamados or su codigo RGB</h2>
     <div class="box-direction">
-    <div class="box-style box-235-86-136"></div>
-    <div class="box-style box-250-61-124"></div>
-    <div class="box-style box-252-9-90"></div>
+    <div class="box-styles box-235-86-136">color:<br>rgb(235, 86, 136)</div>
+    <div class="box-styles box-250-61-124">color:<br>rgb(250, 61, 124)</div>
+    <div class="box-styles box-252-9-90">color:<br>rgb(252, 9, 90)</div>
     </div>
     <H2>Colores llamados por su codigo hexadecimal</H2>
     <div class="box-direction">
-        <div class= "box-style box-EE82EE"></div>
-        <div class= "box-style box-DA70D6"></div>
-        <div class= "box-style box-FF00FF"></div>
+        <div class= "box-styless box-EE82EE">color:<br>#EE82EE</div>
+        <div class= "box-styless box-DA70D6">color:<br>#DA70D6</div>
+        <div class= "box-styless box-FF00FF">color:<br>#FF00FF</div>
     </div>
 </body>
 </html>
