--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
             </ul></li>
             <li><a href="fuentes2.html"> fuentes 2</a></li>
             <li><a href="fuentes3.html"> fuentes 3</a></li>
+            <li><a href="colores.html"> colores</a></li>
         </ul></li> 
        
     </ul> 
+   
 </body>
 </html>
