--- a/catalogo.html
+++ b/catalogo.html
@@ -14,7 +14,15 @@
             <span class="add-cart-1-span">ADD TO CART</span>
         </div>
     </div>
-    <div class="box-style box-2"></div>
-    <div class="box-style box-3">   </div>
+    <div class="box-style box-2">
+        <div class="add-cart-2">
+            <span class="add-cart-2-span">ADD TO CART</span>
+        </div>
+    </div>
+    <div class="box-style box-3"> 
+        <div class="add-cart-3">
+            <span class="add-cart-3-span">ADD TO CART</span>
+        </div>
+         </div>
 </body>
 </html
