--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Bienvenidos a mi PORTAFOLIO</h1>
+    <h1>Bienvenidos </h1>
     <h2>Valentina Gonzalez</h2>
     <h3>contactame. telefono 3183979682</h3>
     <h3>Horarios</h3>
@@ -24,6 +24,7 @@
             <li><a href="fuentes2.html"> fuentes 2</a></li>
             <li><a href="fuentes3.html"> fuentes 3</a></li>
             <li><a href="colores.html"> colores</a></li>
+            <li><a href="catalogo.html"> catalogo</a></li>
         </ul></li> 
     </ul> 
 </body>
