--- a/catalogo.html
+++ b/catalogo.html
@@ -9,20 +9,19 @@
 </head>
 <body>
     <div class="main-box">
-    <div class="box-style box-1">
-        <div class="add-cart-1">
-            <span class="add-cart-1-span">ADD TO CART</span>
+        <div class="box-style box-1">
+            <div class="product-box">
+                <img class="img-style" src="img/reloj-citizen_740x1000.png" alt="Reloj de mujer">
+            </div>
+            <div class="product-text">
+                <span class="product-text-span">Reloj Q&Q</span><br>
+                <span class="text-description">Producido por altos<br> estandares de calidada nivel mundial</span>
+                <span class="price-text">$100.000</span>
+            </div>
+            <div class="add-cart-1">
+                <span class="add-cart-1-span">ADD TO CART</span>
+            </div>
         </div>
     </div>
-    <div class="box-style box-2">
-        <div class="add-cart-2">
-            <span class="add-cart-2-span">ADD TO CART</span>
-        </div>
-    </div>
-    <div class="box-style box-3"> 
-        <div class="add-cart-3">
-            <span class="add-cart-3-span">ADD TO CART</span>
-        </div>
-         </div>
 </body>
 </html
