--- a/catalogo.html
+++ b/catalogo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -30,9 +30,40 @@
         </div>
                 <div class="box-style box-2">
                    <div class="product-box"> 
-                <img class="img-style" src="img/Sin título.png" alt= >
+                <img class="img-style" src="img/Sin título.png" alt="Saco">
                    </div>
+                   <div class="product-text">
+                    <span class="product-text-span">Saco</span><br>
+                    <span class="text-description">Fabricado<br> por algodon genuino</span>
+                    <span class="price-text">$200.000</span>
+                    <i class= "star-style fa-solid fa-star"></i>
+                    <i class="star-style fa-solid fa-star"></i>
+                    <i class="star-style fa-solid fa-star"></i>
+                    <i class="star-style fa-solid fa-star"></i>
+                    <i class="star-style fa-regular fa-star"></i> 
                 </div>
+                <div class="add-cart-2">
+                    <span class="add-cart-2-span">ADD TO CART</span>
+                 </div>
+                </div>
+                <div class="box-style box-3">
+                    <div class="product-box"> 
+                 <img class="img-style" src="img/Sin título.png" alt="Saco">
+                    </div>
+                    <div class="product-text">
+                     <span class="product-text-span">zapatillas</span><br>
+                     <span class="text-description">Fabricado<br> para deportistas de alto rendimiento</span>
+                     <span class="price-text">$300.000</span>
+                     <i class= "star-style fa-solid fa-star"></i>
+                     <i class="star-style fa-solid fa-star"></i>
+                     <i class="star-style fa-solid fa-star"></i>
+                     <i class="star-style fa-solid fa-star"></i>
+                     <i class="star-style fa-regular fa-star"></i> 
+                 </div>
+                 <div class="add-cart-3">
+                    <span class="add-cart-3-span">ADD TO CART</span>
+                 </div>
     </div>
 </body>
-</html
+<img class="img-style" src="img/Sin título.png" alt="Saco">
+<img class="img-style" src="img/reloj-citizen_740x1000.png" alt="Reloj de mujer">
