--- a/catalogo.html
+++ b/catalogo.html
@@ -1,4 +1,4 @@
-<!<!DOCTYPE html>
+!<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -65,5 +65,3 @@
                  </div>
     </div>
 </body>
-<img class="img-style" src="img/Sin título.png" alt="Saco">
-<img class="img-style" src="img/reloj-citizen_740x1000.png" alt="Reloj de mujer">
