--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="fuentes3.html"> fuentes 3</a></li>
             <li><a href="colores.html"> colores</a></li>
             <li><a href="catalogo.html"> catalogo</a></li>
+            <li><a href="tablas.html"> Tabla</a></li>
         </ul></li> 
     </ul> 
 </body>
