--- a/tablas.html
+++ b/tablas.html
@@ -32,7 +32,7 @@
              <td  class="TT" colspan="3"> <i class="check-style fa-solid fa-check"></i> </td>
          </tr>
          <tr>
-            <th class="class2" rowspan="3">HBO</th>
+            <th class="class5" rowspan="3">HBO</th>
             <td class="class3">HBO family</td>
             <td class="TT" colspan="3">No</td>
             <td class="TT">Si</td>
@@ -48,7 +48,7 @@
                <td class="TT">No</td>
                <td class="TT">Si</td>
                <td class="TT">No</td>
-               <td class="TT">Si</td>
+               <td class="TT1">Si</td>
             </tr>
     </table>
   </div>
