--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li><a href="colores.html"> colores</a></li>
             <li><a href="catalogo.html"> catalogo</a></li>
             <li><a href="tablas.html"> Tabla</a></li>
+            <li><a href="menu.html"> Menu</a></li>
         </ul></li> 
     </ul> 
 </body>
