--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="catalogo.html"> catalogo</a></li>
             <li><a href="tablas.html"> Tabla</a></li>
             <li><a href="menu.html"> Menú</a></li>
+            <li><a href="media-query.html"> Menu despegable</a></li>
         </ul></li> 
     </ul> 
 </body>
