--- a/media-query.html
+++ b/media-query.html
@@ -8,17 +8,18 @@
     <link rel="stylesheet" href="css/media-query.css">
 </head>
 <body>
-    <nav class="main-nav">
-        <ul class="main-menu">
-            <samp class="item-style"><a href="#">&#9776</a></samp>
-            <li class="item-style"><a href="#">Menú</a></li>
-            <li class="item-style"><a href="#">Contáctenos</a></li>
-            <li class="item-style"><a href="#">Horario de Atención</a></li>
-            <li class="item-style"><a href="#">Ubicación</a></li>
-            <li class="item-style"><a href="#">Servicios Adicionales</a></li>
-            <li class="item-style"><a href="#">Domicilios</a></li>
-            <li class="item-style"><a href="#">Reservaciones &#9855</a></li>
+    <nav id="mainNAV" class="main-nav">
+        <span id="menuBar" class="menu-bar">&#9776</span>
+        <ul id ="mainMenu" class="main-menu">
+            <li class="item-style"><a href="">Menú</a></li>
+            <li class="item-style"><a href="">Contáctenos</a></li>
+            <li class="item-style"><a href="">Horario de Atención</a></li>
+            <li class="item-style"><a href="">Ubicación</a></li>
+            <li class="item-style"><a href="">Servicios Adicionales</a></li>
+            <li class="item-style"><a href="">Domicilios</a></li>
+            <li class="item-style"><a href="">Reservaciones</a></li>
         </ul>
     </nav>
+    <script src="js/media-query.js"></script>
 </body>
 </html>
