--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li><a href="tablas.html"> Tabla</a></li>
             <li><a href="menu.html"> Menú</a></li>
             <li><a href="media-query.html"> Menu despegable</a></li>
+            <li><a href="transicion.html"> Menu </a></li>
         </ul></li> 
     </ul> 
 </body>
