--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <li><a href="transicion.html"> transicion </a></li>
             <li><a href="posicionamiento.html">posicionamiento </a></li>
             <li><a href="menu-subitems.html">Menú subitems </a></li>
+            <li><a href="flexbox.html">Menú subitems </a></li>
         </ul></li> 
     </ul> 
 </body>
