--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Bienvenidos </h1>
     <h2>Valentina Gonzalez</h2>
-    <h3>contactame. telefono 3183979682</h3>
+    <h3>contactame: telefono 3183979682</h3>
     <h3>Horarios</h3>
 
     <ul>menu 
@@ -19,19 +19,19 @@
             <li><a href="fuentes1.html"> fuentes 1</a>
             <ul>
                 <li><a href="fuentes.html"> fuentes 1A</a></li>
-                <li><a href="fuentes.html"> fuentes 1B</a></li>
             </ul></li>
             <li><a href="fuentes2.html"> fuentes 2</a></li>
             <li><a href="fuentes3.html"> fuentes 3</a></li>
             <li><a href="colores.html"> colores</a></li>
-            <li><a href="catalogo.html"> catalogo</a></li>
+            <li><a href="catalogo.html">catalogo</a></li>
             <li><a href="tablas.html"> Tabla</a></li>
             <li><a href="menu.html"> Menú</a></li>
             <li><a href="media-query.html"> Menu despegable</a></li>
             <li><a href="transicion.html"> transicion </a></li>
             <li><a href="posicionamiento.html">posicionamiento </a></li>
             <li><a href="menu-subitems.html">Menú subitems </a></li>
-            <li><a href="flexbox.html">Menú subitems </a></li>
+            <li><a href="flexbox.html">Menú cajas </a></li>
+            <li><a href="calendario.html">calendario </a></li>
         </ul></li> 
     </ul> 
 </body>
