--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <li><a href="menu-subitems.html">Menú subitems </a></li>
             <li><a href="flexbox.html">Menú cajas </a></li>
             <li><a href="calendario.html">calendario </a></li>
+            <li><a href="maquetacion.html">Maquetacion </a></li>
         </ul></li> 
     </ul> 
 </body>
