--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
             <li><a href="transicion.html"> transicion </a></li>
             <li><a href="posicionamiento.html">posicionamiento </a></li>
             <li><a href="menu-subitems.html">Menú subitems </a></li>
-            <li><a href="flexbox.html">Menú cajas </a></li>
+            <li><a href="flexbox.html">Flexbox</a></li>
             <li><a href="calendario.html">calendario </a></li>
             <li><a href="maquetacion.html">Maquetacion </a></li>
+            <li><a href="maquetacion2.html">Maquetacion </a></li>
         </ul></li> 
     </ul> 
 </body>
