--- a/maquetacion.html
+++ b/maquetacion.html
@@ -15,27 +15,27 @@
          <div class="img-principal style-box">Imagen Principal</div>
    
         <div class="article article-1">
-        <div class="img-article-1 style-box style-img-article">img-article-1</div>
+        <div class="img-article-1 style-box style-img-article"><img src="https://picsum.photos/350/350?random1" alt=""></div>
         <div class="texto-article-1 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
            </div>
          <div class=" article article-2">
-         <div class="img-article-2 style-box style-img-article">img-article-2</div>
+         <div class="img-article-2 style-box style-img-article"><img src="https://picsum.photos/350/350?random2" alt=""></div>
          <div class="texto-article-2 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
            </div>
                   <div class="article article-3">
-                  <div class="img-article-3 style-box style-img-article">img-article-3</div>
+                  <div class="img-article-3 style-box style-img-article"><img src="https://picsum.photos/350/350?random3" alt=""></div>
                   <div class="texto-article-3 style-texto-article ">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
                     </div> 
                                 <div class="article article-4">
-                                <div class="img-article-4 style-box style-img-article">img-article-4</div>
+                                <div class="img-article-4 style-box style-img-article"><img src="https://picsum.photos/350/350?random4" alt=""></div>
                                 <div class="texto-article-4 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
                                    </div>
                                              <div class="article article-5">
-                                             <div class="img-article-5 style-box style-img-article">img-article-5</div>
+                                             <div class="img-article-5 style-box style-img-article"><img src="https://picsum.photos/350/350?random5" alt=""></div>
                                              <div class="texto-article-5 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
                                                 </div>
                                                              <div class="article article-6">
-                                                             <div class="img-article-6 style-box style-img-article">img-article-6</div>
+                                                             <div class="img-article-6 style-box style-img-article"><img src="https://picsum.photos/350/350?random6" alt=""></div>
                                                              <div class="texto-article-6 style-texto-article">Lorem ipsum dolor sit amet consectetur adipisicing elit.</div>
                                                              </div>
     </div>
