--- a/maquetacion2.html
+++ b/maquetacion2.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maquetacion 2</title>
+    <title>Maquetacion-2</title>
     <link rel="stylesheet" href="css/maquetacion2.css">
     <link rel="stylesheet" href="icons/all.css">
 </head>
 <body>
     <header>
        <div class="logo style-box">
-         <img class="img-fondo-grande" src="img/logo.jpg" alt="">
+         <img class="img-logo" src="img/logo.jpg" alt="">
        </div>
         <div class="menu style-box">
             <nav id="mainNav" class="main-nav">
@@ -19,73 +19,74 @@
                   <ul>
                        <li class="item-style">Nuevo</li>
                        <li class="item-style">Bolsas</li>
-                       <li class="item-style">Edicion limitada</li>
+                       <li class="item-style">Edición limitada</li>
                        <li class="item-style">Regalos</li>
                   </ul>
                 </ul>
             </nav>
         </div> 
     </header>                                    
-    <div class="main-content ">
+    <div class="main-contents">
          <div class="img-principal style-box">
         <img class="img-fondo-grande" src="img/fondo.jpg" alt="">
       </div>
-       <div class="article article-1">
-           <div class="img-article-1 style-box style-img-article">
-              <img class="img-fondo" src="img/vestido.jpg" alt="">
-           </div>
-           <div class="texto-article-1 style-texto-article">
-              vestido negro para dama, con diadema en plata, adornando asi y dando elegancia para cualquier ocasion 
-              para que puedas conbinarlos con los ultimos tacones de temporada
-           </div>
-       </div>
-    <div class=" article article-2">
-            <div class="img-article-2 style-box style-img-article">
-             <img class="img-fondo" src="img/rojo.jpg" alt="">
-            </div>
-               <div class="texto-article-1 style-texto-article">
-                  vestidorojo perfecto para el verano, hecho 100% de seda,donde estaras comoda y sofisticada al mismo 
-                  tiempo, recuerda que el outfit queda completo con una bolsa.
-               </div>
-    </div>
-     <div class="article article-3">
-          <div class="img-article-3 style-box style-img-article">
-              <img class="img-fondo" src="img/azul.jpg" alt="">
-          </div>
-              <div class="texto-article-1 style-texto-article ">
-                  vestido para dama en estampado floral donde puedes llevarlo a una salida de verano en la
-                piscina o en la playa
-            </div>
-              </div> 
-     </div>
-     <div class="article article-4">
-        <div class="img-article-4 style-box style-img-article">
+      <div class="article article-1">
+        <div class="img-article-1 style-box style-img-article">
+          <img class="img-fondo" src="img/final.jpg" alt="">
+        </div>
+        <div class="text-article-1 style-texto-article">
+          Vestido negro para dama, con diadema en plata, adornando así y dando elegancia para cualquier ocasión para que puedas combinarlos con los ultimos tacones de temporada.
+        </div>
+      </div>
+      <div class="article article-2">
+        <div class="img-article-2 style-box style-img-article">
+          <img class="img-fondo" src="img/R.png" alt="">
+        </div>
+        <div class="text-article-1 style-texto-article">
+          Vestido negro para dama, con diadema en plata, adornando así y dando elegancia para cualquier ocasión para que puedas combinarlos con los ultimos tacones de temporada.
+        </div>
+      </div>
+      <div class="article article-3">
+        <div class="img-article-3 style-box style-img-article">
           <img class="img-fondo" src="img/blusaajpg.jpg" alt="">
         </div>
         <div class="text-article-1 style-texto-article">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui quae quidem quo praesentium excepturi fugiat?
-          Quibusdam aperiam, itaque pariatur fuga, natus fugiat dicta placeat laborum animi harum aspernatur a suscipit?
+          Blusa verde calsica, con estilo integrado que mantiene lo clasico con lo moderno 
         </div>
       </div>
-    </div>
-    <div class="article article-5">
-        <div class="img-article-5 style-box style-img-article">
-            <img class="img-fondo" src="img/blusaaaaaajpg.jpg" alt="">
+      <div class="article article-3">
+        <div class="img-article-3 style-box style-img-article">
+          <img class="img-fondo" src="img/blusaajpg.jpg" alt="">
         </div>
-             <div class="texto-article-1 style-texto-article">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui quae quidem quo praesentium excepturi fugiat?
-                Quibusdam aperiam, itaque pariatur fuga, natus fugiat dicta placeat laborum animi harum aspernatur a suscipit?  
-            </div>
-    </div>
-     <div class="article article-6">
-         <div class="img-article-6 style-box style-img-article">
-            <img class="img-fondo" src="img/final.jpg" alt="">
-         </div>
-           <div class="texto-article-1 style-texto-article">
-            uello Peter Pan o cuello bebé: esta clase de estilos de blusas resulta agradable a la vista, 
-            sumamente juvenil y por lo general la encontramos en tonos pasteles, en chiffon. Es una blusa que se volvió tendencia hace muy pocos años y es de 
-            las que más se buscan para darle un toque casual y cómodo a una ocasión que amerita mucho adorno. 
-     </div>
+        <div class="text-article-1 style-texto-article">
+          Blusa de estampado manga larga, para combinar con un solo tono de pantalon tiro alto y que tendras la comodidad de la casa al trabajo 
+        </div>
+      </div>
+      <div class="article article-4">
+        <div class="img-article-4 style-box style-img-article">
+          <img class="img-fondo" src="img/verde.png" alt="">
+        </div>
+        <div class="text-article-1 style-texto-article">
+          Blusa negra con mangas de colores que es ideal para colocarsela con una diadema circular y con tacones negros 
+        </div>
+      </div>
+      <div class="article article-5">
+        <div class="img-article-5 style-box style-img-article">
+          <img class="img-fondo" src="img/SARR.png" alt="">
+        </div>
+        <div class="text-article-1 style-texto-article">
+         Blusa negra cuello bandeja que se puede combinar con jean azul clasico para dar el toque de elegancia con una bamba de colores
+        </div>
+      </div>
+      <div class="article article-6">
+        <div class="img-article-6 style-box style-img-article">
+          <img class="img-fondo" src="img/OIP.jpg" alt="">
+        </div>
+        <div class="text-article-1 style-texto-article">
+          Blusa color rosado talla unisex, que la puedes combinar con diferentes outfit, para asi tener el lokk perfecto para la rutina diaria 
+        </div>
+      </div>
+
 </div>
 <script src="js/maquetacion2.js"></script>
 </body>
