--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <li><a href="calendario.html">calendario </a></li>
             <li><a href="maquetacion.html">Maquetacion </a></li>
             <li><a href="maquetacion2.html">Maquetacion </a></li>
+            <li><a href="portafolio.html">PORTAFOLIO</a></li>
         </ul></li> 
     </ul> 
 </body>
