--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             <li><a href="maquetacion.html">Maquetacion </a></li>
             <li><a href="maquetacion2.html">Maquetacion </a></li>
             <li><a href="portafolio.html">PORTAFOLIO</a></li>
+            <li><a href="starbucks.html">starbucks</a></li>
         </ul></li> 
     </ul> 
 </body>
