--- a/portafolio.html
+++ b/portafolio.html
@@ -10,7 +10,7 @@
  <body>
    <div class="container">
       <nav>
-          <div class="logo">PORTAFolio<b>.</b></div>
+          <div class="logo">PORTAFOLIO<b>.</b></div>
           <ul class="navItems">
              <li>><a href="portafolio.html">home</a></li>
              <li>><a href="#">About</a></li>
@@ -25,7 +25,7 @@
      </nav>
      <div class="wrapper">
          <div class="cols cols0">
-            <span class="topline">hello</span>
+            <span class="topline">Hey</span>
             <h1>Hola <span class="multitext">Coder</span></h1>
             <p>Bienvenidos a Mi portafolio, donde vas a encontrar </p>
             <div class="btns">
