--- a/starbucks.html
+++ b/starbucks.html
@@ -28,19 +28,20 @@
        <input class="button-learn" type="button" value="LEARN MORE">
         </div>
         <div class="product-img">
-            <img src="img/starbucks/img1.png" alt="">
+            <img id="icestarbucks" src="img/starbucks/img1.png" alt="Ice starbucks">
         </div>
 <div class="social-media">
-    <i class="fa-brands fa-twitter"></i>
-    <i class="fa-brands fa-facebook"></i>
-    <i class="fa-brands fa-instagram"></i>
+    <i class="style-img-mini fa-brands fa-twitter"></i>
+    <i class="style-img-mini fa-brands fa-facebook"></i>
+    <i class="style-img-mini fa-brands fa-instagram"></i>
    </div>
 </div>
 <footer>
-    <img class="style-img-mini" src="img/starbucks/thumb1.png" alt="">
-    <img class="style-img-mini" src="img/starbucks/thumb2.png" alt="">
-    <img class="style-img-mini" src="img/starbucks/thumb3.png" alt="">
+    <img id="minigreen" class="style-img-mini mini-green"      src="img/starbucks/thumb1.png" alt="">
+    <img id="miniligthpink" class="style-img-mini mini-ligth-pink" src="img/starbucks/thumb2.png" alt="">
+    <img id="minidarkpink" class="style-img-mini mini-dark-pink" src="img/starbucks/thumb3.png" alt="">
 </footer>
-<div class="main-circle"></div>
+<div id="maincircle" class="main-circle main-circle-green"></div>
+<script src="js/starbuks.js"></script>
 </body>
 </html>
