--- a/index.html
+++ b/index.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+ <html lang="en">
+ <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MI PORTAFOLIO</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-    <h1>Bienvenidos </h1>
-    <h2>Valentina Gonzalez</h2>
-    <h3>contactame: telefono 3183979682</h3>
-    <h3>Horarios</h3>
-
-    <ul>menu 
-        <li><a href="listas.html"> lista</a>
-        <ul>
-            <li><a href="fuentes1.html"> fuentes 1</a>
-            <ul>
-                <li><a href="fuentes.html"> fuentes 1A</a></li>
-            </ul></li>
-            <li><a href="fuentes2.html"> fuentes 2</a></li>
-            <li><a href="fuentes3.html"> fuentes 3</a></li>
-            <li><a href="colores.html"> colores</a></li>
-            <li><a href="catalogo.html">catalogo</a></li>
-            <li><a href="tablas.html"> Tabla</a></li>
-            <li><a href="menu.html"> Menú</a></li>
-            <li><a href="media-query.html"> Menu despegable</a></li>
-            <li><a href="transicion.html"> transicion </a></li>
-            <li><a href="posicionamiento.html">posicionamiento </a></li>
-            <li><a href="menu-subitems.html">Menú subitems </a></li>
-            <li><a href="flexbox.html">Flexbox</a></li>
-            <li><a href="calendario.html">calendario </a></li>
-            <li><a href="maquetacion.html">Maquetacion </a></li>
-            <li><a href="maquetacion2.html">Maquetacion </a></li>
-            <li><a href="portafolio.html">PORTAFOLIO</a></li>
-            <li><a href="starbucks.html">starbucks</a></li>
-        </ul></li> 
-    </ul> 
-</body>
-</html>
+    <title> Mi portafolio</title>
+    <link rel="stylesheet" href="css/mi-portafolio.css">
+    <link rel="stylesheet" href="icons/all.css">
+ </head>
+ <body>
+   <div class="container">
+      <nav>
+          <div class="logo">PORTAFOLIO<b>.</b></div>
+          <ul class="navItems">
+             <li>><a href="portafolio.html">home</a></li>
+             <li>><a href="#">About</a></li>
+             <li>><a href="#">Skills</a></li>
+             <li>><a href="#">Blog</a></li>
+         </ul>
+         <div class="links">
+            <a href="#"><i class="fab fa-facebook"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+        </div>
+     </nav>
+     <div class="wrapper">
+         <div class="cols cols0">
+            <span class="topline">Hey</span>
+            <h1>Hola <span class="multitext">Coder</span></h1>
+            <p>Bienvenidos a Mi portafolio, donde vas a encontrar </p>
+            <div class="btns">
+               <button>dowload cv</button>
+               <button>hire me</button>
+               </div>
+         </div>
+         <div class="cols cols1">
+            <div class="imgbox">
+               <img src="img/IMG-4131.png"
+            ></div> 
+         </div>
+     </div>
+   </div>
+   
+ </body>
+ </html>
