--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          <div class="cols cols0">
             <span class="topline">Hey</span>
             <h1>Hola <span class="multitext">Coder</span></h1>
-            <p>Bienvenidos a Mi portafolio, donde vas a encontrar </p>
+            <p>Bienvenidos a Mi portafolio, donde vas a encontrar  </p>
             <div class="btns">
                <button>dowload cv</button>
                <button>hire me</button>
@@ -40,6 +40,8 @@
          </div>
      </div>
    </div>
-   
+   <div>
+     
+   </div>
  </body>
  </html>
