--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
      <div class="wrapper">
          <div class="cols cols0">
             <span class="topline">Hey</span>
-            <h1>Hola <span class="multitext">Coder</span></h1>
-            <p>Bienvenidos a Mi portafolio, donde vas a encontrar  </p>
+            <h1><span class="multitext">Bienvenidos</span></h1>
+            <p>Mi nombre es Valentina Gonzalez, vas a encontrar un portafolio de una diseñadora grafica, que tiene conocmineto de 
+               progracion en html, css y Jvs </p>
             <div class="btns">
                <button>dowload cv</button>
                <button>hire me</button>
@@ -40,8 +41,24 @@
          </div>
      </div>
    </div>
-   <div>
+<section></section>
+     <div class="media">
+   <div class="container">
+      <a href="starbucks.html">
+         <div class="box-dir">
+            <img src="img/starbucks.PNG" alt="">
+            <label>Sneakers</label>
+         </div>
+
+   </div>
+
+
      
    </div>
+
+
+
+
+
  </body>
  </html>
