--- a/catalogo.html
+++ b/catalogo.html
@@ -1,67 +1,68 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Margenes</title>
+    <title>margenes</title>
     <link rel="stylesheet" href="css/catalogo.css">
     <link rel="stylesheet" href="icons/all.css">
+
 </head>
 <body>
     <div class="main-box">
-        <div class="box-style box-1">
-            <div class="product-box">
-                <img class="img-style" src="img/reloj-citizen_740x1000.png" alt="Reloj de mujer">
-            </div>
-              <div class="product-text">
-                <span class="product-text-span">Reloj Q&Q</span><br>
-                <span class="text-description">Producido por altos<br> estandares de calidada nivel mundial</span>
-                <span class="price-text">$100.000</span>
-                <i class= "star-style fa-solid fa-star"></i>
-                <i class="star-style fa-solid fa-star"></i>
-                <i class="star-style fa-solid fa-star"></i>
-                <i class="star-style fa-solid fa-star"></i>
-                <i class="star-style fa-regular fa-star"></i>
-               </div>
-                   <div class="add-cart-1">
-                      <span class="add-cart-1-span">ADD TO CART</span>
-                   </div>
+
+<!--caja del producto -->
+    <div class="box-style box-1">
+        <div class="product-box">
+           <img src="img/saco250x250_.jpg" alt="saco">
         </div>
-                <div class="box-style box-2">
-                   <div class="product-box"> 
-                <img class="img-style" src="img/Sin título.png" alt="Saco">
-                   </div>
-                   <div class="product-text">
-                    <span class="product-text-span">Saco</span><br>
-                    <span class="text-description">Fabricado<br> por algodon genuino</span>
-                    <span class="price-text">$200.000</span>
-                    <i class= "star-style fa-solid fa-star"></i>
-                    <i class="star-style fa-solid fa-star"></i>
-                    <i class="star-style fa-solid fa-star"></i>
-                    <i class="star-style fa-solid fa-star"></i>
-                    <i class="star-style fa-regular fa-star"></i> 
-                </div>
-                <div class="add-cart-2">
-                    <span class="add-cart-2-span">ADD TO CART</span>
-                 </div>
-                </div>
-                <div class="box-style box-3">
-                    <div class="product-box"> 
-                 <img class="img-style" src="img/Sin título.png" alt="Saco">
-                    </div>
-                    <div class="product-text">
-                     <span class="product-text-span">zapatillas</span><br>
-                     <span class="text-description">Fabricado<br> para deportistas de alto rendimiento</span>
-                     <span class="price-text">$300.000</span>
-                     <i class= "star-style fa-solid fa-star"></i>
-                     <i class="star-style fa-solid fa-star"></i>
-                     <i class="star-style fa-solid fa-star"></i>
-                     <i class="star-style fa-solid fa-star"></i>
-                     <i class="star-style fa-regular fa-star"></i> 
-                 </div>
-                 <div class="add-cart-3">
-                    <span class="add-cart-3-span">ADD TO CART</span>
-                 </div>
+        <div class="product-text">
+            <span class="product-text-span">Saco Gucci</span><br>
+            <span class="text-description">Producto con los mas altos<br>estandares a nivel mundial</span>
+            <span class="price-text">$900</span>
+            <i class="star-style1 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style1 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style1 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style1 fa-regular fa-star"></i>
+        </div>
+        <div class="add-cart-1">
+            <span class="add-cart-1-span">ADD TO CART</span>
+        </div>
+    </div>
+    <div class="box-style box-2">
+        <div class="product-box">
+            <img src="img/reloj_inteligente.jpg" alt="reloj Inteligente">
+        </div>
+        <div class="product-text">
+            <span class="product-text-span">Reloj inteligente</span><br>
+            <span class="text-description">Producto con los mas altos<br>estandares a nivel mundial</span>
+            <span class="price-text2">$800</span>
+            <i class="star-style2 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style2 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style2 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style2 fa-regular fa-star"></i>
+        </div>
+    <div class="add-cart-2">
+        <span class="add-cart-2-span">ADD TO CART</span>
+     </div>
+    </div>
+    <div class="box-style box-3">
+        <div class="product-box">
+            <img src="img/airpods250x250_1.jpg" alt="Airpods">
+        </div>
+        <div class="product-text">
+            <span class="product-text-span">Airpods</span><br>
+            <span class="text-description">Producto con los mas altos<br>estandares a nivel mundial</span>
+            <span class="price-text3">$300</span>
+            <i class="star-style3 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style3 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style3 fa-solid fa-star fa-bounce"></i>
+            <i class="star-style3 fa-regular fa-star"></i>
+        </div>
+        <div class="add-cart-3">
+            <span class="add-cart-3-span">ADD TO CART</span>
+         </div>
     </div>
 </body>
+</html>
