--- a/index.html
+++ b/index.html
@@ -41,20 +41,79 @@
          </div>
      </div>
    </div>
-<section></section>
-     <div class="media">
-   <div class="container">
-      <a href="starbucks.html">
-         <div class="box-dir">
-            <img src="img/starbucks.PNG" alt="">
-            <label>Sneakers</label>
+   <h2 class="title-mis-proyectos">
+            Mis proyectos
+   </h2>
+   <div class="box-proyectos">
+      <div class="proyectos">
+       <!-- <a href="#portafolio"></a> -->
+            <div class="proyecto">
+               <a href="starbucks.html">
+                  <!-- <div class="overlay"></div> -->
+                  <img class="img-starbucks" src="img/starbucks.PNG" alt="">
+                  <div class="info">
+                     <Label>starbucks</Label>
+                  </div>
+               </a>
+            </div>
+            <div class="proyecto">
+               <a href="snekers1.html">
+                  <!-- <div class="overlay"></div> -->
+                  <img class="img-starbucks" src="img/sneakers.PNG" alt="">
+                  <div class="info">
+                     <Label>starbucks</Label>
+                  </div>
+               </a>
+            </div>
+            <div class="proyecto">
+               <a href="maquetacion.html">
+                  <!-- <div class="overlay"></div> -->
+                  <img class="img-starbucks" src="img/maquetacion.PNG" alt="">
+                  <div class="info">
+                     <Label>starbucks</Label>
+                  </div>
+               </a>
+            </div>
+            <div class="proyecto">
+               <a href="starbucks.html">
+                  <!-- <div class="overlay"></div> -->
+                  <img class="img-starbucks" src="img/starbucks.PNG" alt="">
+                  <div class="info">
+                     <Label>starbucks</Label>
+                  </div>
+               </a>
+            </div>
+            <div class="proyecto">
+               <a href="starbucks.html">
+                  <!-- <div class="overlay"></div> -->
+                  <img class="img-starbucks" src="img/starbucks.PNG" alt="">
+                  <div class="info">
+                     <Label>starbucks</Label>
+                  </div>
+               </a>
+            </div>
+            <div class="proyecto">
+               <a href="starbucks.html">
+                  <!-- <div class="overlay"></div> -->
+                  <img class="img-starbucks" src="img/starbucks.PNG" alt="">
+                  <div class="info">
+                     <Label>starbucks</Label>
+                  </div>
+               </a>
+            </div>
          </div>
+            <!-- <a href="starbucks.html">
+               <div class="overlay"></div>
+               <img src="img/starbucks.PNG" alt="">
+               <div class="info">
+                  <Label>starbucks</Label>
+               </div>
+            </a>
+         </div>
+      </section>-->
+   </div> 
 
-   </div>
 
-
-     
-   </div>
 
 
 
