--- a/portafolio.html
+++ b/portafolio.html
@@ -1,45 +1,25 @@
+ 
  <!DOCTYPE html>
  <html lang="en">
  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Mi portafolio</title>
-    <link rel="stylesheet" href="css/mi-portafolio.css">
-    <link rel="stylesheet" href="icons/all.css">
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Portafolio</title>
+   <link rel="stylesheet"  type="text/css" href="css/mi-portafolio.css">
+
+   <head>
+      <link rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
+      <!-- or -->
+      <link rel="stylesheet"
+      href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    </head>
  </head>
  <body>
-   <div class="container">
-      <nav>
-          <div class="logo">PORTAFOLIO<b>.</b></div>
-          <ul class="navItems">
-             <li>><a href="portafolio.html">home</a></li>
-             <li>><a href="#">About</a></li>
-             <li>><a href="#">Skills</a></li>
-             <li>><a href="#">Blog</a></li>
-         </ul>
-         <div class="links">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-        </div>
-     </nav>
-     <div class="wrapper">
-         <div class="cols cols0">
-            <span class="topline">Hey</span>
-            <h1>Hola <span class="multitext">Coder</span></h1>
-            <p>Bienvenidos a Mi portafolio, donde vas a encontrar </p>
-            <div class="btns">
-               <button>dowload cv</button>
-               <button>hire me</button>
-               </div>
-         </div>
-         <div class="cols cols1">
-            <div class="imgbox">
-               <img src="img/IMG-4131.png"
-            ></div> 
-         </div>
-     </div>
-   </div>
    
  </body>
  </html>
