--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
                   <!-- <div class="overlay"></div> -->
                   <img class="img-starbucks" src="img/starbucks.PNG" alt="">
                   <div class="info">
-                     <Label>starbucks</Label>
                   </div>
                </a>
             </div>
@@ -61,7 +60,6 @@
                   <!-- <div class="overlay"></div> -->
                   <img class="img-starbucks" src="img/sneakers.PNG" alt="">
                   <div class="info">
-                     <Label>starbucks</Label>
                   </div>
                </a>
             </div>
@@ -70,34 +68,31 @@
                   <!-- <div class="overlay"></div> -->
                   <img class="img-starbucks" src="img/maquetacion.PNG" alt="">
                   <div class="info">
-                     <Label>starbucks</Label>
                   </div>
                </a>
             </div>
             <div class="proyecto">
                <a href="starbucks.html">
                   <!-- <div class="overlay"></div> -->
-                  <img class="img-starbucks" src="img/starbucks.PNG" alt="">
+                  <img class="img-starbucks" src="img/calendario.PNG" alt="">
                   <div class="info">
-                     <Label>starbucks</Label>
                   </div>
                </a>
             </div>
             <div class="proyecto">
                <a href="starbucks.html">
                   <!-- <div class="overlay"></div> -->
-                  <img class="img-starbucks" src="img/starbucks.PNG" alt="">
+                  <img class="img-starbucks" src="img/Pagina.PNG" alt="">
                   <div class="info">
-                     <Label>starbucks</Label>
                   </div>
                </a>
             </div>
             <div class="proyecto">
                <a href="starbucks.html">
                   <!-- <div class="overlay"></div> -->
-                  <img class="img-starbucks" src="img/starbucks.PNG" alt="">
+                  <img class="img-starbucks" src="img/tronos.PNG" alt="">
                   <div class="info">
-                     <Label>starbucks</Label>
+                    
                   </div>
                </a>
             </div>
