--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
          </div>
          <div class="cols cols1">
             <div class="imgbox">
-               <img src="img/IMG-4131.png"
+               <img class="img-valentina" src="img/IMG-4131.png"
             ></div> 
          </div>
      </div>
@@ -46,10 +46,8 @@
    </h2>
    <div class="box-proyectos">
       <div class="proyectos">
-       <!-- <a href="#portafolio"></a> -->
             <div class="proyecto">
                <a href="starbucks.html">
-                  <!-- <div class="overlay"></div> -->
                   <img class="img-starbucks" src="img/starbucks.PNG" alt="">
                   <div class="info">
                   </div>
@@ -57,7 +55,6 @@
             </div>
             <div class="proyecto">
                <a href="snekers1.html">
-                  <!-- <div class="overlay"></div> -->
                   <img class="img-starbucks" src="img/sneakers.PNG" alt="">
                   <div class="info">
                   </div>
@@ -65,7 +62,6 @@
             </div>
             <div class="proyecto">
                <a href="maquetacion.html">
-                  <!-- <div class="overlay"></div> -->
                   <img class="img-starbucks" src="img/maquetacion.PNG" alt="">
                   <div class="info">
                   </div>
@@ -73,7 +69,6 @@
             </div>
             <div class="proyecto">
                <a href="starbucks.html">
-                  <!-- <div class="overlay"></div> -->
                   <img class="img-starbucks" src="img/calendario.PNG" alt="">
                   <div class="info">
                   </div>
@@ -81,7 +76,6 @@
             </div>
             <div class="proyecto">
                <a href="starbucks.html">
-                  <!-- <div class="overlay"></div> -->
                   <img class="img-starbucks" src="img/Pagina.PNG" alt="">
                   <div class="info">
                   </div>
@@ -89,7 +83,6 @@
             </div>
             <div class="proyecto">
                <a href="starbucks.html">
-                  <!-- <div class="overlay"></div> -->
                   <img class="img-starbucks" src="img/tronos.PNG" alt="">
                   <div class="info">
                     
@@ -97,7 +90,7 @@
                </a>
             </div>
          </div>
-            <!-- <a href="starbucks.html">
+         <a href="starbucks.html">
                <div class="overlay"></div>
                <img src="img/starbucks.PNG" alt="">
                <div class="info">
@@ -105,7 +98,7 @@
                </div>
             </a>
          </div>
-      </section>-->
+      </section>
    </div> 
 
 
