--- a/snekers1.html
+++ b/snekers1.html
@@ -110,5 +110,6 @@
  </div>
 </div>
     <script src="js/sneakerss.js"></script>
+    <script src="js/verficar-tamanyo.js"></script>
 </body>
 </html>
